fix sidebar, overlay z-index issues

--- a/app/assets/stylesheets/components/_overlay.scss
+++ b/app/assets/stylesheets/components/_overlay.scss
@@ -1,6 +1,7 @@
 .overlay {
   position: fixed;
   @include inset-full;
+  z-index: z(overlay);
 
   > div {
     position: absolute;
