--- a/app/assets/stylesheets/components/_sidebar.scss
+++ b/app/assets/stylesheets/components/_sidebar.scss
@@ -5,6 +5,7 @@
   position: absolute;
   transition: all 150ms ease-in-out;
   transform: translateX(-200%);
+  z-index: z(sidebar);
 
   @include breakpoint(lg) {
     position: static;
