--- a/app/assets/stylesheets/utils/_z-index.scss
+++ b/app/assets/stylesheets/utils/_z-index.scss
@@ -1,4 +1,6 @@
 $z-index: (
+  overlay: 80,
+  sidebar: 90,
   sidebar-nav: 100,
   toast: 110,
 );
